--- a/src/static/css/master.css
+++ b/src/static/css/master.css
@@ -1070,10 +1070,10 @@ textarea {
   line-height: inherit; }
 
 a {
-  color: #285375;
+  color: #203e54;
   text-decoration: none; }
   a:hover, a:focus {
-    color: #152b3c;
+    color: #0b151c;
     text-decoration: underline; }
   a:focus {
     outline: 5px auto -webkit-focus-ring-color;
@@ -1259,11 +1259,11 @@ mark,
   color: #777777; }
 
 .text-primary {
-  color: #285375; }
+  color: #294f6c; }
 
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #1b384f; }
+  color: #1b3447; }
 
 .text-success {
   color: #3c763d; }
@@ -1297,11 +1297,11 @@ a.text-danger:focus {
   color: #fff; }
 
 .bg-primary {
-  background-color: #285375; }
+  background-color: #294f6c; }
 
 a.bg-primary:hover,
 a.bg-primary:focus {
-  background-color: #1b384f; }
+  background-color: #1b3447; }
 
 .bg-success {
   background-color: #dff0d8; }
@@ -2865,28 +2865,28 @@ fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #eeeeee;
-  background-color: #285375;
-  border-color: #285375; }
+  background-color: #294f6c;
+  border-color: #294f6c; }
   .btn-primary:focus, .btn-primary.focus {
     color: #eeeeee;
-    background-color: #1b384f;
-    border-color: #081016; }
+    background-color: #1b3447;
+    border-color: #060b10; }
   .btn-primary:hover {
     color: #eeeeee;
-    background-color: #1b384f;
-    border-color: #183347; }
+    background-color: #1b3447;
+    border-color: #182f40; }
   .btn-primary:active, .btn-primary.active,
   .open > .btn-primary.dropdown-toggle {
     color: #eeeeee;
-    background-color: #1b384f;
-    border-color: #183347; }
+    background-color: #1b3447;
+    border-color: #182f40; }
     .btn-primary:active:hover, .btn-primary:active:focus, .btn-primary:active.focus, .btn-primary.active:hover, .btn-primary.active:focus, .btn-primary.active.focus,
     .open > .btn-primary.dropdown-toggle:hover,
     .open > .btn-primary.dropdown-toggle:focus,
     .open > .btn-primary.dropdown-toggle.focus {
       color: #eeeeee;
-      background-color: #122534;
-      border-color: #081016; }
+      background-color: #11212d;
+      border-color: #060b10; }
   .btn-primary:active, .btn-primary.active,
   .open > .btn-primary.dropdown-toggle {
     background-image: none; }
@@ -2894,10 +2894,10 @@ fieldset[disabled] a.btn {
   fieldset[disabled] .btn-primary:hover,
   fieldset[disabled] .btn-primary:focus,
   fieldset[disabled] .btn-primary.focus {
-    background-color: #285375;
-    border-color: #285375; }
+    background-color: #294f6c;
+    border-color: #294f6c; }
   .btn-primary .badge {
-    color: #285375;
+    color: #294f6c;
     background-color: #eeeeee; }
 
 .btn-success {
@@ -3049,7 +3049,7 @@ fieldset[disabled] a.btn {
     background-color: #fff; }
 
 .btn-link {
-  color: #285375;
+  color: #203e54;
   font-weight: normal;
   border-radius: 0; }
   .btn-link, .btn-link:active, .btn-link.active, .btn-link[disabled],
@@ -3060,7 +3060,7 @@ fieldset[disabled] a.btn {
   .btn-link, .btn-link:hover, .btn-link:focus, .btn-link:active {
     border-color: transparent; }
   .btn-link:hover, .btn-link:focus {
-    color: #152b3c;
+    color: #0b151c;
     text-decoration: underline;
     background-color: transparent; }
   .btn-link[disabled]:hover, .btn-link[disabled]:focus,
@@ -3193,7 +3193,7 @@ tbody.collapse.in {
   color: #fff;
   text-decoration: none;
   outline: 0;
-  background-color: #285375; }
+  background-color: #294f6c; }
 
 .dropdown-menu > .disabled > a, .dropdown-menu > .disabled > a:hover, .dropdown-menu > .disabled > a:focus {
   color: #777777; }
@@ -3561,7 +3561,7 @@ tbody.collapse.in {
         cursor: not-allowed; }
   .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
     background-color: #eeeeee;
-    border-color: #285375; }
+    border-color: #203e54; }
   .nav .nav-divider {
     height: 1px;
     margin: 10px 0;
@@ -3597,7 +3597,7 @@ tbody.collapse.in {
     margin-left: 2px; }
   .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
     color: #fff;
-    background-color: #285375; }
+    background-color: #294f6c; }
 
 .nav-stacked > li {
   float: none; }
@@ -4081,7 +4081,7 @@ tbody.collapse.in {
       padding: 6px 12px;
       line-height: 1.428571429;
       text-decoration: none;
-      color: #285375;
+      color: #203e54;
       background-color: #fff;
       border: 1px solid #ddd;
       margin-left: -1px; }
@@ -4098,7 +4098,7 @@ tbody.collapse.in {
   .pagination > li > span:hover,
   .pagination > li > span:focus {
     z-index: 2;
-    color: #152b3c;
+    color: #0b151c;
     background-color: #eeeeee;
     border-color: #ddd; }
   .pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus,
@@ -4107,8 +4107,8 @@ tbody.collapse.in {
   .pagination > .active > span:focus {
     z-index: 3;
     color: #fff;
-    background-color: #285375;
-    border-color: #285375;
+    background-color: #294f6c;
+    border-color: #294f6c;
     cursor: default; }
   .pagination > .disabled > span,
   .pagination > .disabled > span:hover,
@@ -4218,9 +4218,9 @@ a.label:hover, a.label:focus {
     background-color: #5e5e5e; }
 
 .label-primary {
-  background-color: #285375; }
+  background-color: #294f6c; }
   .label-primary[href]:hover, .label-primary[href]:focus {
-    background-color: #1b384f; }
+    background-color: #1b3447; }
 
 .label-success {
   background-color: #5cb85c; }
@@ -4266,7 +4266,7 @@ a.label:hover, a.label:focus {
     padding: 1px 5px; }
   .list-group-item.active > .badge,
   .nav-pills > .active > a > .badge {
-    color: #285375;
+    color: #203e54;
     background-color: #fff; }
   .list-group-item > .badge {
     float: right; }
@@ -4339,7 +4339,7 @@ a.badge:hover, a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #285375; }
+  border-color: #203e54; }
 
 .alert {
   padding: 15px;
@@ -4432,7 +4432,7 @@ a.thumbnail.active {
   line-height: 22px;
   color: #fff;
   text-align: center;
-  background-color: #285375;
+  background-color: #294f6c;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -4574,8 +4574,8 @@ button.list-group-item {
 .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #285375;
-  border-color: #285375; }
+  background-color: #294f6c;
+  border-color: #294f6c; }
   .list-group-item.active .list-group-item-heading,
   .list-group-item.active .list-group-item-heading > small,
   .list-group-item.active .list-group-item-heading > .small, .list-group-item.active:hover .list-group-item-heading,
@@ -4585,7 +4585,7 @@ button.list-group-item {
   .list-group-item.active:focus .list-group-item-heading > .small {
     color: inherit; }
   .list-group-item.active .list-group-item-text, .list-group-item.active:hover .list-group-item-text, .list-group-item.active:focus .list-group-item-text {
-    color: #90b9d9; }
+    color: #8db6d4; }
 
 .list-group-item-success {
   color: #3c763d;
@@ -4920,18 +4920,18 @@ button.list-group-item-danger {
     border-bottom-color: #ddd; }
 
 .panel-primary {
-  border-color: #285375; }
+  border-color: #294f6c; }
   .panel-primary > .panel-heading {
     color: #fff;
-    background-color: #285375;
-    border-color: #285375; }
+    background-color: #294f6c;
+    border-color: #294f6c; }
     .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-      border-top-color: #285375; }
+      border-top-color: #294f6c; }
     .panel-primary > .panel-heading .badge {
-      color: #285375;
+      color: #294f6c;
       background-color: #fff; }
   .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-    border-bottom-color: #285375; }
+    border-bottom-color: #294f6c; }
 
 .panel-success {
   border-color: #d6e9c6; }
@@ -5814,64 +5814,56 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
-p {
-  margin: 15px 0; }
-
 .row {
   display: flex;
   flex-wrap: wrap; }
 
 .btn-primary {
-  border-bottom: 3px solid #1b384f; }
-
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary.focus {
-  background-color: #1b384f;
-  border-color: #1b384f; }
-
-.navbar-default .navbar-brand {
-  font-size: 34px; }
-
-.navbar-default .btn {
-  font-size: 18px;
-  margin-left: 15px; }
-
-.jumbotron h1, .jumbotron h2 {
-  font-weight: bold; }
-
-.jumbotron .fa {
-  color: #1b384f; }
-
-.fa-10x {
-  font-size: 10em; }
+  border-bottom: 3px solid #203e54; }
+  .btn-primary:hover, .btn-primary:focus, .btn-primary.focus {
+    background-color: #203e54;
+    border-color: #203e54; }
 
 .fa-20x {
   font-size: 20em; }
+
+.headline {
+  font-family: 'Roboto Slab', serif; }
 
 /* CONTENT */
 .top-page {
   background-image: url("../img/bg_blue_black.png");
   padding-top: 10px; }
   .top-page.has-error {
-    background-image: url("../img/bg_error_11.png"); }
-    .top-page.has-error .btn, .top-page.has-error .btn-primary {
-      background-color: #a02a03;
-      border-color: #7d2306; }
+    background-image: none;
+    background-color: #d9544f; }
+    .top-page.has-error .btn-primary {
+      background-color: #bb2d28;
+      border-color: #a02722; }
+      .top-page.has-error .btn-primary:hover, .top-page.has-error .btn-primary:focus, .top-page.has-error .btn-primary.focus {
+        background-color: #a02722; }
+  .top-page .navbar-default {
+    font-size: 1.15em; }
+    .top-page .navbar-default .navbar-brand {
+      font-size: 2.4em; }
+    .top-page .navbar-default .btn {
+      font-size: 1.15em;
+      margin-left: 15px; }
+  .top-page .jumbotron hr {
+    width: 20%;
+    border-color: #222222; }
 
 .posts .col-sm-6 {
-  border-top: 1px dotted #c3c3c3; }
+  border-top: 1px dotted #b9b9b9; }
+  .posts .col-sm-6:nth-child(1), .posts .col-sm-6:nth-child(2) {
+    border-top: 0; }
   .posts .col-sm-6:nth-child(even) {
-    border-left: 1px dotted #c3c3c3; }
+    border-left: 1px dotted #b9b9b9; }
 
 .post {
-  background-color: #ffffff;
-  border-bottom: 1px solid #d1d1d7;
+  background-color: #fff;
+  border-bottom: 1px solid #b9b9b9;
   margin: 0 0 20px;
   padding: 15px; }
-
-.post-details {
-  color: #777777; }
-
-.headline {
-  font-family: 'Roboto Slab', serif; }
+  .post .post-content > p:first-child::first-letter {
+    font-size: 5em; }
