--- a/src/templates/commons/pagination.html
+++ b/src/templates/commons/pagination.html
@@ -1,26 +1,30 @@
 {% block pagination %}
+  {% for rep in response %}
+    on a
+    {{ rep }}
+  {% endfor %}
   <nav class="text-center" aria-label="Page navigation">
     <ul class="pagination">
       <li {% if pagination.current_page == 1 %} class="disabled" {% endif %}>
-        <a {% if pagination.current_page > 1 %} href="./{{ pagination.current_page - 1 }}" {% endif %} aria-label="Previous">
+        <a {% if pagination.current_page > 1 %} href="?p={{ pagination.current_page - 1 }}" {% endif %} aria-label="Previous">
           <span aria-hidden="true">&laquo;</span>
         </a>
       </li>
 
       {% for x in range(pagination.nb_items_before) %}
         {% set page_id = pagination.current_page - (pagination.nb_items_before - x) %}
-        <li><a href="./{{ page_id }}">{{ page_id }}</a></li>
+        <li><a href="?p={{ page_id }}">{{ page_id }}</a></li>
       {% endfor %}
 
       <li class="active"><a href="#">{{ pagination.current_page }}</a></li>
 
       {% for x in range(pagination.nb_items_after) %}
         {% set page_id = pagination.current_page + (x + 1) %}
-        <li><a href="./{{ page_id }}">{{ page_id }}</a></li>
+        <li><a href="?p={{ page_id }}">{{ page_id }}</a></li>
       {% endfor %}
 
       <li  {% if pagination.current_page == pagination.total_pages %} class="disabled" {% endif %}>
-        <a {% if pagination.current_page < pagination.total_pages %} href="./{{ pagination.current_page + 1 }}" {% endif %} aria-label="Next">
+        <a {% if pagination.current_page < pagination.total_pages %} href="?p={{ pagination.current_page + 1 }}" {% endif %} aria-label="Next">
           <span aria-hidden="true">&raquo;</span>
         </a>
       </li>
