--- a/src/templates/commons/posts/view.html
+++ b/src/templates/commons/posts/view.html
@@ -1,10 +1,9 @@
-{% if post %}
-    <a href="/posts/view/{{post.key()}}" alt="Link to article {{post.title}}">{{ post.title }}</a>
-    <br>
-    {{ post.content }}
-    <br>
-    Created by {{ post.parent().username }} on {{ post.creation_date }}
-    <br>
-    <h2><a href="/posts/like/{{post.key()}}">{{ nb_likes }} Like</a></h2>
-    <hr>
-{% endif %}
+<div class="row">
+  <div class="col-sm-10 col-sm-offset-1">
+    <div class="post-content">
+      <p>{{ post.content }}</p>
+      <p><i class="fa fa-user-circle-o"></i> {{ post.parent().username }}</p>
+      <p class="text-right"><a href="/posts/like/{{post.key()}}">{{ nb_likes }} Like</a></p>
+    </div>
+  </div>
+</div>
