--- a/src/templates/exception/error.html
+++ b/src/templates/exception/error.html
@@ -8,7 +8,7 @@
 {% block jumbotron %}
   <div class="row text-center">
     <div class="col-sm-12">
-      <h2 class="h1 headline">Oops! An error occured</h2>
+      <h1 class="headline">Oops! An error occured</h1>
       <p>
         {% if errors %}
           {% for error in errors %}
