--- a/src/templates/login/page.html
+++ b/src/templates/login/page.html
@@ -8,7 +8,7 @@
 {% block jumbotron %}
   <div class="row text-center">
     <div class="col-sm-12">
-      <h2 class="h1 headline">Log in</h2>
+      <h1 class="headline">Log in</h1>
       <p>Just one more step before to post!</p>
     </div>
   </div>
