--- a/src/templates/posts/view.html
+++ b/src/templates/posts/view.html
@@ -7,7 +7,7 @@
 {% block jumbotron %}
   <div class="row text-center">
     <div class="col-sm-12">
-      <h2 class="h1 headline">{{ post.title }}</h2>
+      <h1 class="headline">{{ post.title }}</h1>
       <hr>
       <p class="post-details headline"><i class="fa fa-calendar-o"></i> {{ post.creation_date.strftime("%A %d %B %Y") }}</p>
     </div>
