--- a/src/templates/signup/page.html
+++ b/src/templates/signup/page.html
@@ -7,7 +7,7 @@
 {% block jumbotron %}
   <div class="row text-center">
     <div class="col-sm-12">
-      <h2 class="h1 headline">Sign up</h2>
+      <h1 class="headline">Sign up</h1>
       <p>Just one more step before to post!</p>
     </div>
   </div>
