--- a/src/static/sass/_blog.scss
+++ b/src/static/sass/_blog.scss
@@ -4,9 +4,10 @@
 }
 
 .btn-primary {
-  border-bottom: 3px solid $blue-darker;
+  border-width: 0 0 3px;
 
   &:hover,
+  &:active:focus,
   &:focus,
   &.focus {
     background-color: $blue-darker;
@@ -22,10 +23,9 @@
   font-family: 'Roboto Slab', serif;
 }
 
-/* CONTENT */
+// TOP PAGE = NAVBAR + JUMBOTRON
 .top-page {
   background-image: url('../img/bg_blue_black.png');
-  padding-top: 10px;
 
   &.has-error {
     background-image: none;
@@ -43,30 +43,34 @@
     }
   }
 
-  .navbar-default {
-    font-size: 1.15em;
-
-    .navbar-brand {
-      font-size: 2.4em;
+  .navbar {
+    &.navbar-default,
+    .btn {
+       font-size: $font-size-large;
     }
 
-    .btn {
-      font-size: 1.15em;
+    .navbar-brand {
+       font-size: $font-size-h1;
+    }
+
+    .navbar-btn {
       margin-left: 15px;
     }
   }
 
   .jumbotron {
     hr {
-      width: 20%;
+      width: 35%;
       border-color: $gray-darker;
     }
   }
 }
 
+// LIST POSTS
 .posts {
-  .col-sm-6 {
+  .post {
     border-top: 1px dotted $gray-light2;
+    padding: 15px;
 
     &:nth-child(1), &:nth-child(2) {
       border-top: 0;
@@ -75,19 +79,17 @@
     &:nth-child(even) {
       border-left: 1px dotted $gray-light2;
     }
-  }
-}
 
-.post {
-  background-color: $gray-white;
-  border-bottom: 1px solid $gray-light2;
+    .post-content {
+      background-color: $gray-white;
+      border-bottom: 1px solid $gray-light2;
 
-  margin: 0 0 20px;
-  padding: 15px;
+      padding: 15px;
 
-  .post-content > p {
-    &:first-child::first-letter {
-      font-size: 5em;
+      .small {
+        color: $gray-light;
+        margin: 0;
+      }
     }
   }
 }
