--- a/src/static/sass/_custom-variables.scss
+++ b/src/static/sass/_custom-variables.scss
@@ -13,12 +13,12 @@ $gray-darker:            lighten($gray-base, 13.5%) !default; // #222
 $gray-dark:              lighten($gray-base, 20%) !default;   // #333
 $gray:                   lighten($gray-base, 33.5%) !default; // #555
 $gray-light:             lighten($gray-base, 46.7%) !default; // #777
-$gray-light2:             lighten($gray-base, 72.7%) !default; 
+$gray-light2:            lighten($gray-base, 72.7%) !default;
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 $gray-white:              #fff !default;
 
 
-$blue-base:              #0d1922 !default;
+$blue-base:              #0f293c !default;
 $blue-darker:            lighten($blue-base, 13.5%) !default;
 $blue-dark:              lighten($blue-base, 20%) !default;
 $blue:                   lighten($blue-base, 33.5%) !default;
@@ -87,7 +87,7 @@ $line-height-computed:    floor(($font-size-base * $line-height-base)) !default;
 
 //** By default, this inherits from the `<body>`.
 $headings-font-family:    inherit !default;
-$headings-font-weight:    500 !default;
+$headings-font-weight:    600 !default;
 $headings-line-height:    1.1 !default;
 $headings-color:          inherit !default;
 
@@ -173,9 +173,9 @@ $btn-default-color:              #333 !default;
 $btn-default-bg:                 #fff !default;
 $btn-default-border:             #ccc !default;
 
-$btn-primary-color:              $gray-lighter !default;
-$btn-primary-bg:                 $brand-primary !default;
-$btn-primary-border:             $brand-primary  !default;
+$btn-primary-color:              $gray-white !default;
+$btn-primary-bg:                 $blue-dark !default;
+$btn-primary-border:             $blue-darker  !default;
 
 $btn-success-color:              #fff !default;
 $btn-success-bg:                 $brand-success !default;
@@ -382,29 +382,29 @@ $container-lg:                 $container-large-desktop !default;
 //##
 
 // Basics of a navbar
-$navbar-height:                    50px !default;
+$navbar-height:                    60px !default;
 $navbar-margin-bottom:             0 !default;
 $navbar-border-radius:             0 !default;
 $navbar-padding-horizontal:        floor(($grid-gutter-width / 2)) !default;
 $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2) !default;
 $navbar-collapse-max-height:       340px !default;
 
-$navbar-default-color:             $gray-lighter !default;
+$navbar-default-color:             $gray-white !default;
 $navbar-default-bg:                transparent !default;
 $navbar-default-border:            transparent !default;
 
 // Navbar links
-$navbar-default-link-color:                $gray-lighter !default;
+$navbar-default-link-color:                $gray-white !default;
 $navbar-default-link-hover-color:          $gray-lighter !default;
 $navbar-default-link-hover-bg:             transparent !default;
 $navbar-default-link-active-color:         $gray-lighter !default;
-$navbar-default-link-active-bg:            darken($navbar-default-bg, 6.5%) !default;
+$navbar-default-link-active-bg:            transparent !default;
 $navbar-default-link-disabled-color:       #ccc !default;
 $navbar-default-link-disabled-bg:          transparent !default;
 
 // Navbar brand label
 $navbar-default-brand-color:               $navbar-default-link-color !default;
-$navbar-default-brand-hover-color:         $gray-lighter !default;
+$navbar-default-brand-hover-color:         $navbar-default-link-color !default;
 $navbar-default-brand-hover-bg:            transparent !default;
 
 // Navbar toggle
@@ -510,7 +510,7 @@ $pager-disabled-color:                 $pagination-disabled-color !default;
 //##
 
 $jumbotron-padding:              15px !default;
-$jumbotron-color:                $gray-darker !default;
+$jumbotron-color:                $blue-base !default;
 $jumbotron-bg:                   transparent !default;
 $jumbotron-heading-color:        inherit !default;
 $jumbotron-font-size:            ceil(($font-size-base * 1.5)) !default;
