--- a/src/templates/posts/edit.html
+++ b/src/templates/posts/edit.html
@@ -7,7 +7,7 @@
 {% block jumbotron %}
   <div class="row text-center">
     <div class="col-sm-12">
-      <h2 class="h1 headline">Edit Post</h2>
+      <h1 class="headline">Edit Post</h1>
     </div>
   </div>
 {% endblock %}
