--- a/src/templates/commons/pagination.html
+++ b/src/templates/commons/pagination.html
@@ -1,14 +1,14 @@
 {% block pagination %}
-  {% for rep in response %}
-    on a
-    {{ rep }}
-  {% endfor %}
   <nav class="text-center" aria-label="Page navigation">
     <ul class="pagination">
-      <li {% if pagination.current_page == 1 %} class="disabled" {% endif %}>
-        <a {% if pagination.current_page > 1 %} href="?p={{ pagination.current_page - 1 }}" {% endif %} aria-label="Previous">
+      <li class="{{ 'disabled' if pagination.current_page == 1 }}">
+        {% if pagination.current_page > 1 %}
+          <a  href="?p={{ pagination.current_page - 1 }}" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        {% else %}
           <span aria-hidden="true">&laquo;</span>
-        </a>
+        {% endif %}
       </li>
 
       {% for x in range(pagination.nb_items_before) %}
@@ -16,17 +16,21 @@
         <li><a href="?p={{ page_id }}">{{ page_id }}</a></li>
       {% endfor %}
 
-      <li class="active"><a href="#">{{ pagination.current_page }}</a></li>
+      <li class="active"><a href="">{{ pagination.current_page }}</a></li>
 
       {% for x in range(pagination.nb_items_after) %}
         {% set page_id = pagination.current_page + (x + 1) %}
         <li><a href="?p={{ page_id }}">{{ page_id }}</a></li>
       {% endfor %}
 
-      <li  {% if pagination.current_page == pagination.total_pages %} class="disabled" {% endif %}>
-        <a {% if pagination.current_page < pagination.total_pages %} href="?p={{ pagination.current_page + 1 }}" {% endif %} aria-label="Next">
+      <li class="{{ 'disabled' if pagination.current_page == pagination.total_pages }}">
+        {% if pagination.current_page != pagination.total_pages %}
+          <a href="?p={{ pagination.current_page + 1 }}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        {% else %}
           <span aria-hidden="true">&raquo;</span>
-        </a>
+        {% endif %}
       </li>
     </ul>
   </nav>
