--- a/src/templates/commons/posts/list.html
+++ b/src/templates/commons/posts/list.html
@@ -1,41 +1,63 @@
 <div class="row posts">
   {% if posts %}
     {% for post in posts %}
-      <!-- POST Begin -->
+      <!-- START Post -->
       <div class="col-sm-6 post">
-        <div class="post-content">
+        <div class="post-summarize">
+          {% if user and post.parent().key() == user.key() %}
+            <!-- START Admin Post -->
+            <div class="post-actions">
+              <p class="text-right">
+                <a href="/posts/edit/{{post.key()}}"><i class="fa fa-pencil-square" title="Edit"></i></a>
+                 ·
+                <a onclick="$('#alert-{{post.key()}}').show()"><i class="fa fa-times-rectangle" title="Delete"></i></a>
+              </p>
+
+              <div id="alert-{{post.key()}}" class="alert alert-danger alert-dismissible fade in" role="alert" style="display: none;">
+                <p class="h4">Are you sure you want to delete this post?</p>
+                <p>
+                  There won't be a way back!
+                </p>
+                <p class="text-right"> <a href="/posts/delete/{{post.key()}}" class="btn btn-danger">Yes, delete</a>
+                   <button type="button" class="btn btn-default" onclick="$('#alert-{{post.key()}}').hide()">Cancel</button>
+                </p>
+              </div>
+            </div>
+            <!-- END Admin Post -->
+          {% endif %}
+
           <p class="small pull-right">
             <i class="fa fa-calendar-o"></i>  {{ post.creation_date.strftime('%d-%m-%Y') }}
           </p>
+
           <h3 class="headline"><a href="/posts/view/{{ post.key() }}">{{ post.title }}</a></h3>
+
           <p>
-            {{ post.content|truncate(250, False, '...') }}
+            {{ post.content|truncate(250, False, '...')|nl2br }}
           </p>
           <p class="text-right">
             <a href="/posts/view/{{ post.key() }}" alt="Link to article {{post.title}}">Read more</a>
           </p>
+
           <p class="small">
-            <i class="fa fa-heart-o"></i> {{ nb_likes[post.key()] }} like {{'s' if nb_likes[post.key()] > 1 }} ·
-            <i class="fa fa-comments-o"></i> {{ nb_comments[post.key()] }} comment {{'s' if nb_comments[post.key()] > 1 }}
+            <i class="fa fa-heart-o"></i> {{ nb_likes[post.key()] }} like{{'s' if nb_likes[post.key()] > 1 }} ·
+            <i class="fa fa-comments-o"></i> {{ nb_comments[post.key()] }} comment{{'s' if nb_comments[post.key()] > 1 }}
             <span class="pull-right"><i class="fa fa-user-circle"></i> {{ post.parent().username }}</span>
           </p>
         </div>
       </div>
-      <!-- POST End -->
-      <!-- {% if user %}
-        {% if post.parent().key() == user.key() %}
-          <h4><a href="/posts/edit/{{ post.key() }}">Edit</a></h4>
-          <h4><a href="/posts/delete/{{ post.key() }}">Delete</a></h4>
-        {% endif %}
-      {% endif %} -->
+      <!-- END Post -->
     {% endfor %}
+
   {% else %}
-    <div class="col-sm-8 col-sm-offset-4">
-      <i class="fa pull-left fa-frown-o fa-5x"></i>
+  <!-- NO POST -->
+    <div class="col-sm-12 text-center">
       <p class="h1">There is no post!</p>
-      <p>Why don't you write one?</p>
+      <p>Why don't you <a href="/posts/add">write one</a> ?</p>
     </div>
   {% endif %}
 </div>
 
-{% include "commons/pagination.html" %}
+{% if posts %}
+  {% include "commons/pagination.html" %}
+{% endif %}
