--- a/src/templates/home/page.html
+++ b/src/templates/home/page.html
@@ -6,24 +6,32 @@
 
 {% block jumbotron %}
   <div class="row">
+
     {% if not user %}
+    <!-- USER LOGGED OUT -->
       <div class="col-sm-7">
         <h1 class="headline">Lorem Ipsum</h1>
+
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Etenim nec iustitia nec amicitia esse omnino poterunt, nisi ipsae per se expetuntur.
         </p>
         <p class="text-right"><a class="btn btn-primary btn-lg" href="/register" role="button">Sign up</a></p>
       </div>
+
       <div class="col-sm-5 text-center">
         <i class="fa fa-paper-plane fa-20x" aria-hidden="true"></i>
       </div>
+
     {% else %}
+    <!-- USER LOGGED IN -->
       <div class="col-sm-12 text-center">
         <h1 class="headline">Discover</h1>
+
         <p>What people have to say to the world</p>
       </div>
     {% endif %}
+
   </div>
 {% endblock %}
 
