--- a/src/templates/commons/posts/list.html
+++ b/src/templates/commons/posts/list.html
@@ -1,18 +1,12 @@
 <div class="row posts">
   {% if posts %}
     {% for post in posts %}
-      <!-- START Post -->
+    <!-- START Post -->
       <div class="col-sm-6 post">
         <div class="post-summarize">
           {% if user and post.parent().key() == user.key() %}
             <!-- START Admin Post -->
             <div class="post-actions">
-              <p class="text-right">
-                <a href="/posts/edit/{{post.key()}}"><i class="fa fa-pencil-square" title="Edit"></i></a>
-                 ·
-                <a onclick="$('#alert-{{post.key()}}').show()"><i class="fa fa-times-rectangle" title="Delete"></i></a>
-              </p>
-
               <div id="alert-{{post.key()}}" class="alert alert-danger alert-dismissible fade in" role="alert" style="display: none;">
                 <p class="h4">Are you sure you want to delete this post?</p>
                 <p>
@@ -44,11 +38,21 @@
             <i class="fa fa-comments-o"></i> {{ nb_comments[post.key()] }} comment{{'s' if nb_comments[post.key()] > 1 }}
             <span class="pull-right"><i class="fa fa-user-circle"></i> {{ post.parent().username }}</span>
           </p>
+
+          {% if user and post.parent().key() == user.key() %}
+          <!-- START Admin Post -->
+            <div class="post-actions">
+              <p class="text-center">
+                <a href="/posts/edit/{{post.key()}}"><i class="fa fa-pencil-square" title="Edit"></i> Edit</a>
+                 ·
+                <a onclick="$('#alert-{{post.key()}}').show()"><i class="fa fa-times-rectangle" title="Delete"></i> Delete</a>
+              </p>
+            </div>
+          {% endif %}
         </div>
       </div>
       <!-- END Post -->
     {% endfor %}
-
   {% else %}
   <!-- NO POST -->
     <div class="col-sm-12 text-center">
